@startuml er-marketing
' Propósito: modelo relacional del módulo marketing (Campaign + Promotion + PromotionUsage + M:N)
' Última actualización: 2026-06-08
' Código de referencia: backend/app/modules/marketing/models/

!theme plain
skinparam linetype ortho
skinparam nodesep 55
skinparam ranksep 70
skinparam defaultFontSize 13
hide circle
hide empty members

title ER — Backend · Marketing module

legend top right
  | <#FFFFE0> Marker | Significado |
  | * | NOT NULL |
  | <<PK>> | Primary Key |
  | <<FK>> | Foreign Key |
  | <<unique>> | UNIQUE constraint |
  | <<nullable>> | NULL permitido |
  | <<join>> | Tabla de asociación M:N |
endlegend

' ─────────────────────────────────────────────────────────────
' Campaign
' ─────────────────────────────────────────────────────────────
entity "campaign" as t_camp {
  * id : varchar(36) <<PK>>
  --
  * code : varchar(40) <<unique>>
  * name : varchar(120)
  description : varchar(500) <<nullable>>
  * start_date : date
  end_date : date <<nullable>>
  * status : varchar(20)            ' draft / active / paused / ended
  target_vertical_id : varchar(36) <<nullable, FK→vertical>>
  --
  * active : boolean
  deleted_at : timestamptz <<nullable>>
  * created_on : timestamptz
  * created_by : varchar(36)
  * updated_on : timestamptz
  * updated_by : varchar(36)
}

' ─────────────────────────────────────────────────────────────
' Promotion
' ─────────────────────────────────────────────────────────────
entity "promotion" as t_prom {
  * id : varchar(36) <<PK>>
  --
  * code : varchar(40) <<unique>>
  * name : varchar(120)
  description : varchar(500) <<nullable>>
  * discount_type : varchar(20)     ' percentage / fixed_amount (INMUTABLE)
  * discount_value : numeric(10,2)
  * currency : varchar(3) = 'PEN'
  * start_date : date
  end_date : date <<nullable>>
  max_uses_total : int <<nullable>>
  max_uses_per_person : int <<nullable>>
  * applies_to_all_products : boolean = false
  --
  ' Validaciones (en service):
  '   percentage  ⇒ 0 < discount_value <= 100
  '   fixed_amount ⇒ discount_value > 0
  '   start_date <= end_date (si end_date NOT NULL)
  * active : boolean
  deleted_at : timestamptz <<nullable>>
  * created_on : timestamptz
  * created_by : varchar(36)
  * updated_on : timestamptz
  * updated_by : varchar(36)
}

' ─────────────────────────────────────────────────────────────
' PromotionUsage (audit + reportes)
' ─────────────────────────────────────────────────────────────
entity "promotion_usage" as t_pu {
  * id : varchar(36) <<PK>>
  --
  * promotion_id : varchar(36) <<FK→promotion>>
  * person_id : varchar(36) <<FK→person>>
  * product_id : varchar(36) <<FK→product>>
  appointment_id : varchar(36) <<nullable, FK→appointment>>
  campaign_id : varchar(36) <<nullable, FK→campaign>>
  * original_amount : numeric(10,2)
  * discount_amount : numeric(10,2)
  * final_amount : numeric(10,2)
  * currency : varchar(3)
  notes : varchar(500) <<nullable>>
  --
  ' Invariantes (en service):
  '   final_amount = original_amount - discount_amount
  '   No stacking: UNIQUE PARCIAL real en BD sobre
  '     (appointment_id) WHERE appointment_id IS NOT NULL
  '   max_uses_total y max_uses_per_person validados antes de insertar
  ' SIN SoftDelete — audit inmutable (no deleted_at)
  ' Timestamp/actor de aplicación = created_on / created_by
  '   (created_by = SYSTEM_USER_ID si la aplicación es automática)
  * active : boolean
  * created_on : timestamptz
  * created_by : varchar(36)
  * updated_on : timestamptz
  * updated_by : varchar(36)
}

' ─────────────────────────────────────────────────────────────
' Tablas de asociación M:N
' ─────────────────────────────────────────────────────────────
entity "campaign_promotion" as t_cp <<join>> {
  * campaign_id : varchar(36) <<PK, FK→campaign>>
  * promotion_id : varchar(36) <<PK, FK→promotion>>
  --
  ON DELETE CASCADE
}

entity "promotion_product" as t_pp <<join>> {
  * promotion_id : varchar(36) <<PK, FK→promotion>>
  * product_id : varchar(36) <<PK, FK→product>>
  --
  ON DELETE CASCADE
}

' ─────────────────────────────────────────────────────────────
' Externas (referencia)
' ─────────────────────────────────────────────────────────────
entity "vertical" as t_vert <<external>> #lightgrey {
  ' Módulo: catalog
  * id : varchar(36) <<PK>>
  ...
}
entity "product" as t_prod <<external>> #lightgrey {
  ' Módulo: catalog
  * id : varchar(36) <<PK>>
  * base_price : numeric(10,2)
  ...
}
entity "person" as t_per <<external>> #lightgrey {
  ' Módulo: crm
  * id : varchar(36) <<PK>>
  ...
}
entity "person_lead_status" as t_pls <<external>> #lightgrey {
  ' Módulo: crm
  source_campaign_id : varchar(36) <<FK→campaign>>
  ...
}
entity "lead_status_history" as t_lsh <<external>> #lightgrey {
  ' Módulo: crm
  source_campaign_id : varchar(36) <<FK→campaign>>
  ...
}
entity "channel_account" as t_ca <<external>> #lightgrey {
  ' Módulo: conversations
  default_campaign_id : varchar(36) <<FK→campaign>>
  ...
}
entity "appointment" as t_appt <<external>> #lightgrey {
  ' Módulo: scheduling
  * id : varchar(36) <<PK>>
  ...
}

' ─────────────────────────────────────────────────────────────
' Relaciones
' ─────────────────────────────────────────────────────────────

' Campaign ↔ Promotion (M:N)
t_camp ||--o{ t_cp
t_cp   }o--|| t_prom

' Promotion ↔ Product (M:N)
t_prom ||--o{ t_pp
t_pp   }o--|| t_prod

' Campaign → Vertical (opcional, FK real)
t_vert |o--o{ t_camp : "target"

' Campaign atribuye leads (FKs forward CERRADAS por marketing — ADR-009)
t_camp ||--o{ t_pls : "source_campaign_id\n(crm · FK ALTER 0022)"
t_camp ||--o{ t_lsh : "source_campaign_id\n(crm · FK ALTER 0022)"
t_camp ||--o{ t_ca  : "default_campaign_id\n(conversations · FK ALTER 0022)"

' PromotionUsage
t_prom ||--o{ t_pu   : "aplicaciones"
t_per  ||--o{ t_pu   : "usado por"
t_prod ||--o{ t_pu   : "producto descontado"
t_appt |o--o{ t_pu   : "(opcional, no-stacking)"
t_camp |o--o{ t_pu   : "atribución (opcional)"

' ─────────────────────────────────────────────────────────────
' Notas
' ─────────────────────────────────────────────────────────────

note right of t_camp
  **Iniciativa de marketing**
  Sin UTM / budget en MVP.
  Status workflow (enum fijo, validado en service):
  draft → active → paused → active → ended
  (ended es terminal).
end note

note right of t_prom
  **Descuento sobre productos**
  ""discount_type"" discriminado (INMUTABLE post-create):
   • percentage (0-100)
   • fixed_amount (>0)
  ""applies_to_all_products=true""
  ignora la M:N promotion_product.

  ""max_uses_total"" / ""max_uses_per_person""
  validados al aplicar (lock FOR UPDATE
  vía promotion_repository.get_for_update).
end note

note bottom of t_pu
  **Inmutable. Source of truth.**
  Cada aplicación deja snapshot:
   • original_amount (precio al momento)
   • discount_amount
   • final_amount
   • product_id (qué producto recibió el descuento)
  Timestamp/actor = ""created_on"" / ""created_by""
  (TimestampMixin; ""created_by=SYSTEM_USER_ID""
  cuando la aplicación es automática — bot/scheduling).
  No-stacking: índice ""uq_promotion_usage_appointment""
  = UNIQUE PARCIAL real en BD sobre (appointment_id)
  WHERE appointment_id IS NOT NULL (dialect-agnóstico:
  postgresql_where + sqlite_where), NO solo en service.
end note

note bottom of t_cp
  **Una promo puede vivir
  en múltiples campañas**
  (ej. '20% off' en 'Verano'
  y 'Aniversario').
end note

note bottom of t_pp
  **Productos cubiertos**
  Si promotion.applies_to_all_products=true,
  esta tabla puede estar vacía
  (la promo aplica a todo).
end note

note top of t_pls
  **FKs forward cerradas por marketing (ADR-009)**
  Las 3 columnas ""source_campaign_id"" /
  ""default_campaign_id"" se crearon en crm /
  conversations SIN constraint. La migración
  ""0022_marketing_campaign"" agrega el FK real
  vía ""op.create_foreign_key"" (ALTER) una vez
  que la tabla ""campaign"" existe. Índices ya
  existían → no se recrean.
end note

@enduml
